// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalForm /> should render a form 1`] = `
<form
  autoComplete="off"
>
  <TextInput
    name="testInput"
  />
</form>
`;

exports[`<VerticalForm /> should render with an onChange and onSubmit attributes if handleChange are handleSubmit are passed in 1`] = `
<form
  autoComplete="off"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <TextInput
    name="testInput"
  />
</form>
`;

exports[`<VerticalForm /> should render with autoComplete when it is passed in 1`] = `
<form
  autoComplete="off"
>
  <TextInput
    name="testInput"
  />
</form>
`;
